<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvStepOne"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryLight"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:inputType="text"
                android:hint="@string/create_appointment_description"
                android:textSize="@dimen/edittext_textsize_login"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Especialidad"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/type_appointment"
            />

        <Spinner
            android:id="@+id/spinnerSpecialties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_appointment_type"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/type_appointment"/>

        <RadioGroup
            android:id="@+id/radioGroupType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/opcionuno"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/typeuno" />
            <RadioButton
                android:id="@+id/opciondos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/typedos" />
            <RadioButton
                android:id="@+id/opciontres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/typetres"/>
        </RadioGroup>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableStart="@drawable/ic_navigate_next"
            android:textColorHighlight="@color/colorPrimaryText"
            android:paddingVertical="15dp"
            android:paddingLeft="110dp"
            android:paddingRight="130dp"
            android:text="@string/button_create_appointment" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
